[package]
name = "juju"
description = "A library to interact with the Juju system. For an example charm see: https://github.com/cholcombe973/gluster-charm"
documentation = "https://docs.rs/juju"
version = "0.5.15"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
repository = "https://github.com/cholcombe973/Juju"
license = "MIT"

[dependencies]
charmhelpers = "~0.1"
log = "~0.3"
memchr = "~1.0"
serde_json = "~0.8"
