[package]
name = "juju"
description = "A library to interact with the Juju system. For an example charm see: https://github.com/cholcombe973/gluster-charm"
documentation = "https://docs.rs/juju"
version = "1.0.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
repository = "https://github.com/cholcombe973/Juju"
license = "MIT"

[dependencies]
charmhelpers = "~0.1"
chrono = "0.4.5"
log = "~0.3"
memchr = "~1.0"
rusqlite = { features = ["chrono"], version = "0.14.0" }
serde = "~0.9"
serde_derive = "~0.9"
serde_json = "~0.9"
